# translation

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  main.py  pyproject.toml
admin-server/: .gitignore  config.example.yaml  pyproject.toml  requirements.txt
admin-server/app/: __init__.py  auth.py  config.py  database.py  routes.py
admin-ui/: package-lock.json  package.json  vite.config.ts
admin-ui/src/: App.tsx  index.css
admin-ui/src/components/: Layout.tsx
admin-ui/src/lib/: api.ts
admin-ui/src/pages/: Login.tsx  Overview.tsx  Users.tsx
app/: __init__.py  auth.py  config.py  database.py  logger.py  routes.py  translator.py
chrome-extension/: background.js  content.js  create_icons.py  manifest.json  options.html  options.js  popup.html  popup.js
dashboard-ui/: package-lock.json  package.json  vite.config.ts
dashboard-ui/src/: App.tsx  index.css
dashboard-ui/src/components/: AuthGuard.tsx  UpgradeModal.tsx
dashboard-ui/src/lib/: api.ts
dashboard-ui/src/pages/: Dashboard.tsx  Login.tsx  Translation.tsx
docs/superpowers/plans/: 2026-06-15-alipay-membership.md  2026-06-22-deep-learn-feature.md
docs/superpowers/specs/: 2026-06-15-alipay-membership-design.md  (+2 more)
templates/: login.html
translation-server/: .gitignore  config.example.yaml  pyproject.toml
translation-server/app/: __init__.py  auth.py  config.py  database.py  deep_learn.py  models.py  payment.py  routes.py  translator.py  user.py
translation-server/templates/: dashboard.html  index.html  login.html
translation-server/tests/: conftest.py  test_deep_learn.py
