[project]
name = "translation"
version = "0.1.0"
description = "中英文智能互译服务，基于 Claude AI，支持划词翻译 Chrome 插件"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "langchain-openai>=0.3.0",
    "openai>=2.41.1",
    "pillow>=12.2.0",
    "pydantic>=2.0",
    "pyjwt>=2.13.0",
    "pymysql>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
]

[project.scripts]
serve = "main:flask_app"

[tool.uv]
dev-dependencies = []
